force-app/main/default/objects/Opportunity_Idea_Assignment__c/Opportunity_Idea_Assignment__c.object-meta.xml
<CustomObject>
    <description>renamed from Opportunity Idea Assignment to Related Opportunities for ticket GTMS-14057</description>
    <label>Related Opportunity</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Related Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>