force-app/main/default/objects/Opportunity_Idea_Assignment__c/fields/ACV_Value__c.field-meta.xml
<CustomField>
    <fullName>ACV_Value__c</fullName>
    <label>ACV Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>