force-app/main/default/objects/Opportunity_Idea_Assignment__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for GTMS-14610</description>
    <inlineHelpText>FR must meet escalation criteria to be marked as escalated.</inlineHelpText>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>