force-app/main/default/objects/Opportunity_Idea_Assignment__c/validationRules/Check_If_FR_is_Merged.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_If_FR_is_Merged</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Is_Merged__c,
NOT(ISNEW()),
OR(
ISCHANGED(Escalated__c),
ISCHANGED(  Opportunity__c  ),
ISCHANGED(  Oppty_Priority_Level__c  ),
ISCHANGED( Notes__c )
)
)</errorConditionFormula>
    <errorMessage>This Feature Request has been merged.</errorMessage>
</ValidationRule>